force-app/main/default/objects/Battleground_KPI__c/Battleground_KPI__c.object-meta.xml
<CustomObject>
    <description>Battleground KPI master (BRD 19/20.1). Category, frequency, measure, qualifier/incentive flags; links to the KPI Metric that computes the actual.</description>
    <label>Battleground KPI</label>
    <nameField>
        <label>KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Battleground KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>