force-app/main/default/objects/Battleground_KPI__c/fields/Aggregate_Field__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Field__c</fullName>
    <label>Aggregate Field</label>
    <description>Field aggregated for SUM/AVG/MIN/MAX (ignored for COUNT).</description>
    <length>100</length>
    <type>Text</type>
</CustomField>