force-app/main/default/objects/Battleground_KPI__c/fields/Aggregation__c.field-meta.xml
<CustomField>
    <fullName>Aggregation__c</fullName>
    <label>Aggregation</label>
    <description>How the source records are aggregated into the actual.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>COUNT</fullName><default>true</default><label>Count of records</label></value>
            <value><fullName>SUM</fullName><default>false</default><label>Sum of a field</label></value>
            <value><fullName>AVG</fullName><default>false</default><label>Average of a field</label></value>
            <value><fullName>MIN</fullName><default>false</default><label>Minimum of a field</label></value>
            <value><fullName>MAX</fullName><default>false</default><label>Maximum of a field</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>