force-app/main/default/objects/Battleground_KPI__c/fields/Calculation__c.field-meta.xml
<CustomField>
    <fullName>Calculation__c</fullName>
    <label>Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>