force-app/main/default/objects/Battleground_KPI__c/fields/Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Field__c</fullName>
    <label>Date Field</label>
    <description>Date/Datetime field used to filter records to the game period.</description>
    <length>100</length>
    <type>Text</type>
</CustomField>