force-app/main/default/objects/Battleground_KPI__c/fields/Is_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Is_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Incentive</label>
    <type>Checkbox</type>
</CustomField>