force-app/main/default/objects/Battleground_KPI__c/fields/Is_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Is_Qualifier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Qualifier</label>
    <type>Checkbox</type>
</CustomField>