force-app/main/default/objects/Battleground_KPI__c/fields/KPI_Metric__c.field-meta.xml
<CustomField>
    <fullName>KPI_Metric__c</fullName>
    <description>Existing KPI metric that computes the actual value.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Metric</label>
    <referenceTo>KPI_Metric__c</referenceTo>
    <relationshipName>Battleground_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>