force-app/main/default/objects/Battleground_KPI__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <description>API name of the object the actual is calculated from (gamification scoring).</description>
    <length>100</length>
    <type>Text</type>
</CustomField>