force-app/main/default/objects/Battleground_KPI__c/fields/UI_Name__c.field-meta.xml
<CustomField>
    <fullName>UI_Name__c</fullName>
    <label>UI Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>