force-app/main/default/objects/Battleground_KPI__c/fields/User_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Field__c</fullName>
    <label>User Field</label>
    <description>User lookup/owner field used to attribute records to a salesperson.</description>
    <length>100</length>
    <type>Text</type>
</CustomField>